Profil fotoğrafı ve favicon için gerekli düzenlemeler yapıldı

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <!-- Profile image will be added here -->
-                    <div class="profile-placeholder"></div>
+                    <!-- Profile image -->
+                    <div class="profile-placeholder">
+                        <img src="assets/images/profile/profile-photo.jpg" alt="İbrahim Cevher Kabadayı" onError="this.style.display='none'">
+                    </div>
                 </div>
             </div>
         </div>
