--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <div class="nav-links">
                 <a href="#about" class="nav-link" data-i18n="about">Hakkımda</a>
                 <a href="#experience" class="nav-link" data-i18n="experience">Deneyim</a>
+                <a href="#education" class="nav-link" data-i18n="education">Eğitim</a>
                 <a href="#skills" class="nav-link" data-i18n="skills">Yetenekler</a>
                 <a href="#projects" class="nav-link" data-i18n="projects">Projeler</a>
                 <a href="https://cevher.org" class="nav-link blog-link" target="_blank" rel="noopener">Blog</a>
@@ -141,6 +142,21 @@
                 <h2 class="section-title" data-i18n="experienceTitle">Deneyim</h2>
                 <div class="timeline">
                     <!-- Timeline items will be populated by JavaScript -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Education Section -->
+        <section id="education" class="section">
+            <div class="container">
+                <h2 class="section-title" data-i18n="educationTitle">Eğitim</h2>
+                <div class="education-container">
+                    <div class="education-card">
+                        <h3>Ondokuz Mayıs Üniversitesi</h3>
+                        <h4 data-i18n="bachelorDegree">Endüstri Mühendisliği Lisans</h4>
+                        <p class="education-period">Eylül 2015 - Temmuz 2020</p>
+                        <p class="education-desc" data-i18n="educationDesc">İş yazılımı planlaması, koordinasyonu ve verimliliği üzerine eğitim aldım. Farklı sektörlerde, verimli BT sistemlerinin hayata geçirilmesi üzerine çalıştım.</p>
+                    </div>
                 </div>
             </div>
         </section>
