İletişim formu kaldırıldı, mobil menü ve iletişim bölümü eklendi

--- a/index.html
+++ b/index.html
@@ -75,12 +75,16 @@
             <div class="logo">
                 <a href="/" aria-label="Ana Sayfa">İCK</a>
             </div>
+            <button class="menu-toggle" aria-label="Menüyü Aç/Kapat">
+                <i class="fas fa-bars"></i>
+            </button>
             <div class="nav-links">
                 <a href="#about" class="nav-link" data-i18n="about">Hakkımda</a>
                 <a href="#experience" class="nav-link" data-i18n="experience">Deneyim</a>
                 <a href="#education" class="nav-link" data-i18n="education">Eğitim</a>
                 <a href="#skills" class="nav-link" data-i18n="skills">Yetenekler</a>
                 <a href="#projects" class="nav-link" data-i18n="projects">Projeler</a>
+                <a href="#contact" class="nav-link" data-i18n="contact">İletişim</a>
                 <a href="https://cevher.org" class="nav-link blog-link" target="_blank" rel="noopener">Blog</a>
             </div>
             <div class="nav-controls">
@@ -177,6 +181,32 @@
                 <h2 class="section-title" data-i18n="projectsTitle">Projeler</h2>
                 <div class="projects-grid">
                     <!-- Projects will be populated by JavaScript -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="section">
+            <div class="container">
+                <h2 class="section-title" data-i18n="contactTitle">İletişim</h2>
+                <div class="contact-container">
+                    <div class="contact-info">
+                        <p data-i18n="contactText">Benimle iletişime geçmek için aşağıdaki iletişim bilgilerini kullanabilirsiniz.</p>
+                        <div class="contact-details">
+                            <div class="contact-item">
+                                <i class="fas fa-envelope"></i>
+                                <a href="mailto:ickabadayi@gmail.com">ickabadayi@gmail.com</a>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fab fa-linkedin"></i>
+                                <a href="https://linkedin.com/in/ickabadayi" target="_blank" rel="noopener">linkedin.com/in/ickabadayi</a>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fas fa-blog"></i>
+                                <a href="https://cevher.org" target="_blank" rel="noopener">cevher.org</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
