--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     </script>
 </head>
 <body class="light-mode">
+    <!-- Accessibility Skip Link -->
+    <a href="#main" class="skip-to-content" data-i18n="skipToContent">İçeriğe geç</a>
+    
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
@@ -129,7 +132,7 @@
     </section>
 
     <!-- Main Content -->
-    <main>
+    <main id="main">
         <!-- About Section -->
         <section id="about" class="section">
             <div class="container">
