İngilizce çeviriler ve dil değiştirme hatası düzeltildi

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="name">İbrahim Cevher Kabadayı</h1>
-                    <h2 class="title">Yazılım Test Mühendisi</h2>
-                    <p class="description">4+ yıllık deneyime sahip, dinamik ve detay odaklı bir Yazılım Test Mühendisi.</p>
+                    <h2 class="title" data-i18n="jobTitle">Yazılım Test Mühendisi</h2>
+                    <p class="description" data-i18n="shortBio">4+ yıllık deneyime sahip, dinamik ve detay odaklı bir Yazılım Test Mühendisi.</p>
                     <div class="social-links">
                         <a href="https://linkedin.com/in/ickabadayi" target="_blank" rel="noopener" class="social-link" aria-label="LinkedIn Profili">
                             <i class="fab fa-linkedin" aria-hidden="true"></i>
@@ -138,7 +138,7 @@
             <div class="container">
                 <h2 class="section-title" data-i18n="aboutTitle">Hakkımda</h2>
                 <div class="about-content">
-                    <p class="about-text">4+ yıllık deneyime sahip, dinamik ve detay odaklı bir Yazılım Test Mühendisiyim. Manuel ve otomasyon testleri (Selenium), API testleri (Postman, Rest Assured) ve veri akış doğrulama (PostgreSQL) konularında uzmanım. Test süreçlerinin planlanması, event storming analizi (Couchbase, Elasticsearch, Apache Kafka) ve Agile metodolojileri (Scrum, Kanban) ile çalışma konusunda güçlü bir deneyime sahibim.</p>
+                    <p class="about-text" data-i18n="aboutText">4+ yıllık deneyime sahip, dinamik ve detay odaklı bir Yazılım Test Mühendisiyim. Manuel ve otomasyon testleri (Selenium), API testleri (Postman, Rest Assured) ve veri akış doğrulama (PostgreSQL) konularında uzmanım. Test süreçlerinin planlanması, event storming analizi (Couchbase, Elasticsearch, Apache Kafka) ve Agile metodolojileri (Scrum, Kanban) ile çalışma konusunda güçlü bir deneyime sahibim.</p>
                 </div>
             </div>
         </section>
@@ -218,7 +218,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 İbrahim Cevher Kabadayı. Tüm hakları saklıdır.</p>
+            <p>&copy; <span id="currentYear">2024</span> İbrahim Cevher Kabadayı. <span data-i18n="copyright">Tüm hakları saklıdır.</span></p>
             <p>
                 <a href="https://linkedin.com/in/ickabadayi" target="_blank" rel="noopener" aria-label="LinkedIn Profili">LinkedIn</a> | 
                 <a href="https://cevher.org" target="_blank" rel="noopener" aria-label="Blog Sayfası">Blog</a> | 
