Added cookie consent functionality for GDPR compliance

--- a/index.html
+++ b/index.html
@@ -215,6 +215,17 @@
         </section>
     </main>
 
+    <!-- Cookie Consent -->
+    <div id="cookie-consent" class="cookie-consent">
+        <div class="cookie-content">
+            <p><span data-i18n="cookieConsentText">Bu sitede oturum tercihlerinizi (tema, dil) saklamak için yerel depolama kullanıyoruz. Bu bilgiler sadece sizin tarayıcınızda saklanır ve üçüncü taraflarla paylaşılmaz.</span></p>
+            <div class="cookie-buttons">
+                <button id="accept-cookies" class="cookie-btn accept" data-i18n="acceptCookies">Kabul Et</button>
+                <button id="reject-cookies" class="cookie-btn reject" data-i18n="rejectCookies">Reddet</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
